--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^14.2.0",
     "ajv": "8.11.0",
     "alertifyjs": "^1.13.1",
+    "angular-ng-autocomplete": "^2.0.12",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
     "bootstrap-material-design": "4.1.3",
