--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "classlist.js": "1.1.20150312",
     "eslint": "^8.11.0",
     "express": "4.17.3",
+    "file-saver": "^2.0.5",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "html2canvas": "^1.4.1",
     "jquery": "3.6.0",
     "jspdf": "^2.5.1",
     "moment": "2.29.1",
+    "pdfmake": "^0.2.7",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
@@ -53,6 +55,8 @@
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
