--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
+    "date-fns": "^3.0.0-alpha.2",
     "eslint": "^8.11.0",
     "express": "4.17.3",
     "file-saver": "^2.0.5",
