--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "classlist.js": "1.1.20150312",
     "date-fns": "^3.0.0-alpha.2",
     "eslint": "^8.11.0",
-    "express": "4.17.3",
+    "exceljs": "^4.4.0",
+    "express": "^4.17.3",
     "file-saver": "^2.0.5",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
@@ -48,6 +49,7 @@
     "jquery": "3.6.0",
     "jspdf": "^2.5.1",
     "moment": "2.29.1",
+    "path": "^0.12.7",
     "pdfmake": "^0.2.7",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
@@ -70,7 +72,7 @@
     "@types/google.maps": "3.47.4",
     "@types/jasmine": "~4.0.0",
     "@types/jasminewd2": "~2.0.10",
-    "@types/jquery": "3.5.6",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^17.0.21",
     "codelyzer": "6.0.2",
     "jasmine-core": "~4.4.0",
